--- a/Diagnosis.App/Controls/Card/PatientHeader.xaml
+++ b/Diagnosis.App/Controls/Card/PatientHeader.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="30" d:DesignWidth="300">
+    <!--PatientViewModel-->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
