--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -9,6 +9,7 @@
              mc:Ignorable="d"
              x:Name="card"
              d:DesignHeight="400" d:DesignWidth="500">
+    <!--PatientViewModel-->
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
