--- a/Diagnosis.App/Controls/Search/SearchTree.xaml
+++ b/Diagnosis.App/Controls/Search/SearchTree.xaml
@@ -17,12 +17,6 @@
                 <ResourceDictionary Source="../../Styles/TreeStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <InputBindingCollection x:Shared="False" x:Key="InputBindings">
-                <KeyBinding Key="Space" Command="{Binding ToggleCommand}" />
-                <KeyBinding Key="Enter" Command="{Binding ToggleCommand}" />
-                <MouseBinding MouseAction="LeftClick" Command="{Binding ToggleCommand}" />
-            </InputBindingCollection>
-
             <Style x:Key="simpleTreeItemContainerStyle"
                    TargetType="TreeViewItem"
                    BasedOn="{StaticResource TreeViewItemStyle}">
@@ -30,7 +24,8 @@
                 <Setter Property="IsSelected" Value="{Binding IsSelected}" />
                 <Setter Property="IsExpanded" Value="{Binding IsFiltered}" />
                 <Setter Property="Visibility" Value="{Binding IsFiltered, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                <Setter Property="controls:Attached.InputBindings" Value="{StaticResource InputBindings}" />
+                <EventSetter Event="KeyDown" Handler="item_KeyDown" />
+                <EventSetter Event="MouseUp" Handler="item_MouseUp" />
                 <EventSetter Event="Selected" Handler="item_selected" />
             </Style>
 
@@ -65,7 +60,6 @@
 
                 <TextBox.InputBindings>
                     <KeyBinding Key="Escape" Command="{Binding ToggleResultsVisibleCommand}" />
-                    <KeyBinding Key="Enter" Command="{Binding SelectCommand}" />
                 </TextBox.InputBindings>
             </TextBox>
             <Button Grid.Column="1"
