--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -31,6 +31,7 @@
         <BitmapImage x:Key="undoImage" UriSource="/Resources/Arrow_UndoRevertRestore_16xLG.png" />
         <BitmapImage x:Key="deleteImage" UriSource="/Resources/Delete_black_32x32.png" />
         <BitmapImage x:Key="editImage" UriSource="/Resources/126_Edit_24x24_72.png" />
+        <BitmapImage x:Key="findImage" UriSource="/Resources/Find_5650.png" />       
 
 
         <s:Boolean x:Key="True">True</s:Boolean>
@@ -92,7 +93,14 @@
         <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}" x:Key="squareButton" >
             <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" />
         </Style>
-        
+
+        <Style TargetType="Image" x:Key="buttonIcon">
+            <Setter Property="Margin" Value="0,0,5,0" />
+            <Setter Property="SnapsToDevicePixels" Value="True" />
+            <Setter Property="Height" Value="16" />
+            <Setter Property="Width" Value="16" />
+        </Style>
+
         <Style TargetType="DockPanel" x:Key="formLine">
             <Setter Property="Margin">
                 <Setter.Value>
