--- a/Diagnosis.App/Controls/Editors/CategoryChooser.xaml
+++ b/Diagnosis.App/Controls/Editors/CategoryChooser.xaml
@@ -8,6 +8,7 @@
              mc:Ignorable="d"             
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
+        <!--HealthRecord or SearchViewModel-->
         <Controls:RadioListBox ItemsSource="{Binding Categories}"
             Focusable="False"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
