--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -78,7 +78,7 @@
         <ListView x:Name="records"
                   Grid.Row="1"
                   Margin="10,0,10,0"
-                  ItemsSource="{Binding HealthRecordsView}"
+                  ItemsSource="{Binding HealthRecords}"
                   IsSynchronizedWithCurrentItem="True"
                   SelectedItem="{Binding SelectedHealthRecord}"
                   Style="{StaticResource list}"
