--- a/Diagnosis.App/Controls/Directory/FullTree.xaml
+++ b/Diagnosis.App/Controls/Directory/FullTree.xaml
@@ -1,4 +1,4 @@
-﻿<controls:TreeCommon x:Class="Diagnosis.App.Controls.FullTree"
+﻿<UserControl x:Class="Diagnosis.App.Controls.FullTree"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,32 +7,33 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <controls:TreeCommon.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="EditableTreeStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <Style  x:Key="containerStyle"
-                    TargetType="TreeViewItem"
-                    BasedOn="{StaticResource TreeItemContainerStyle}">
+            <Style x:Key="containerStyle"
+                   TargetType="TreeViewItem"
+                   BasedOn="{StaticResource TreeItemContainerStyle}">
                 <EventSetter Event="Selected" Handler="item_selected" />
             </Style>
 
             <HierarchicalDataTemplate
                 x:Key="fullTreeItemTemplate"
                 ItemsSource="{Binding Children}">
-                <ContentControl Content="{Binding}" Style="{StaticResource TreeItemTemplateStyle}" Focusable="False" /> <!--Focusable to navigate-->
+                <ContentControl Content="{Binding}"
+                                ContentTemplate="{Binding ItemTemplate, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                Focusable="False" />
+                <!--Focusable to navigate-->
             </HierarchicalDataTemplate>
         </ResourceDictionary>
-    </controls:TreeCommon.Resources>
-    <Grid>
-        <TreeView
+    </UserControl.Resources>
+    <TreeView
             x:Name="tree"
             Style="{StaticResource TreeViewStyle}"
             ItemContainerStyle="{StaticResource containerStyle}"
             ItemTemplate="{StaticResource fullTreeItemTemplate}"
             ItemsSource="{Binding}">
-        </TreeView>
-    </Grid>
-</controls:TreeCommon>
+    </TreeView>
+</UserControl>
