--- a/Diagnosis.App/Controls/CardParts/AppointmentsTabs.xaml
+++ b/Diagnosis.App/Controls/CardParts/AppointmentsTabs.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.Card.AppointmentsTabs"
+﻿<UserControl x:Class="Diagnosis.App.Controls.CardParts.AppointmentsTabs"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-             xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
+             xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
              xmlns:vm="clr-namespace:Diagnosis.ViewModels"
              mc:Ignorable="d"
              d:DesignHeight="50" d:DesignWidth="300">
