--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
              x:Class="Diagnosis.App.Controls.Editors.HealthRecordEditorShared"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -55,7 +56,7 @@
                         <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
 
-                    <controls:AutoComplete DataContext="{Binding DataContext.AutoComplete, ElementName=editor}" />
+                    <search:AutoComplete DataContext="{Binding DataContext.AutoComplete, ElementName=editor}" />
                     <TextBox Text="{Binding NumValue, StringFormat={}{0:G6}, TargetNullValue=''}"
                              ToolTip="Числовое значение"
                              Width="60"
@@ -87,7 +88,7 @@
                        Visibility="{Binding ShowIcdDisease, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Label Content="диагноз МКБ" />
                 <StackPanel>
-                    <controls:SearchTree DataContext="{Binding DiagnosisSearch}" />
+                    <search:SearchTree DataContext="{Binding DiagnosisSearch}" />
                 </StackPanel>
             </DockPanel>
             <DockPanel>
