--- a/Diagnosis.App/Controls/Search/AutoComplete.xaml
+++ b/Diagnosis.App/Controls/Search/AutoComplete.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.AutoComplete"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Search.AutoComplete"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
              mc:Ignorable="d"
              d:DesignHeight="30" d:DesignWidth="300"
              DataContextChanged="UserControl_DataContextChanged">
@@ -31,7 +32,7 @@
             </Grid>
         </DataTemplate>
 
-        <controls:AutocompleteDataTemplateSelector x:Key="AutocompleteTemplateSelector"
+        <search:AutocompleteDataTemplateSelector x:Key="AutocompleteTemplateSelector"
                                                    DiagnosisTemplate="{StaticResource DiagnosisTemplate}"
                                                    WordTemplate="{StaticResource CategorisedTemplate}"
                                                    SymptomTemplate="{StaticResource CategorisedTemplate}" />
