--- a/Diagnosis.App/Controls/Search/HrSearchResult.xaml
+++ b/Diagnosis.App/Controls/Search/HrSearchResult.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.HrSearchResult"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Search.HrSearchResult"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
