--- a/Diagnosis.App/Screens/Search.xaml
+++ b/Diagnosis.App/Screens/Search.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl x:Class="Diagnosis.App.Screens.Search"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
              xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
-             xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
+             xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -109,19 +110,8 @@
                     <KeyBinding Key="Enter" Command="{Binding SearchCommand}" />
                 </StackPanel.InputBindings>
                 
-                <controls:AutoComplete DataContext="{Binding WordSearch}" />
+                <search:AutoComplete DataContext="{Binding WordSearch}" />
                 <DockPanel Style="{StaticResource line}">
-                    <!--<StackPanel DockPanel.Dock="Top"
-                        Visibility="{Binding Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
-                        <TextBlock Style="{StaticResource lineHeader}">Слова:</TextBlock>
-                        <ListView ItemsSource="{Binding Words}">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <controls:TreeItemLight />
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </StackPanel>-->
                     <CheckBox IsChecked="{Binding AnyWord}" Margin="0,10,0,0">Хотя бы одно слово</CheckBox>
                 </DockPanel>
                 <DockPanel Style="{StaticResource line}">
@@ -205,11 +195,11 @@
             </ListView.GroupStyle>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <controls:HrSearchResult Margin="0,3,0,3">
-                        <controls:HrSearchResult.InputBindings>
+                    <search:HrSearchResult Margin="0,3,0,3">
+                        <search:HrSearchResult.InputBindings>
                             <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenHealthRecordCommand}" />
-                        </controls:HrSearchResult.InputBindings>
-                    </controls:HrSearchResult>
+                        </search:HrSearchResult.InputBindings>
+                    </search:HrSearchResult>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
