--- a/Diagnosis.App/Controls/Search/PopupSearch.xaml
+++ b/Diagnosis.App/Controls/Search/PopupSearch.xaml
@@ -3,7 +3,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-             x:Class="Diagnosis.App.Controls.Search.FloatSearch"
+             x:Class="Diagnosis.App.Controls.Search.PopupSearch"
              mc:Ignorable="d"
              d:DesignHeight="100" d:DesignWidth="300"
              x:Name="floatSearch"
