--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -49,14 +49,14 @@
                     Margin="0,2,0,11" />
         </Grid>
 
-        <search:FloatSearch x:Name="search"
+        <search:PopupSearch x:Name="search"
                               DataContext="{Binding Search}"
                               Grid.Row="1">
-            <search:FloatSearch.InputBindings>
+            <search:PopupSearch.InputBindings>
                 <KeyBinding Key="Escape" Command="{Binding DataContext.ToggleResultsVisibleCommand, ElementName=search}"></KeyBinding>
                 <KeyBinding Key="Enter" Command="{Binding DataContext.SelectCommand, ElementName=search}"></KeyBinding>
-            </search:FloatSearch.InputBindings>
-        </search:FloatSearch>
+            </search:PopupSearch.InputBindings>
+        </search:PopupSearch>
 
         <DataGrid x:Name="dataGrid"
                   Grid.Row="3"
